Wiki/Features fixes, Shop content adjustement, code cleanup